<resources>
    <string name="app_name">MC-lab-Exp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- 文字列のパターンを追加したい場合はここ -->
    <string name="menu_top">トップ画面</string>
    <string name="menu_exp">環境変更</string>
    <string name="menu_que">アンケート</string>
    <string name="menu_admin">管理</string>

    <string name="exp_title_ceiling">天井の照明</string>
    <string name="exp_title_wall">壁面の照明</string>
    <string name="exp_title_vm">擬似窓</string>

    <string name="exp_ce_color">色あい</string>
    <string name="exp_ce_bri">明るさ</string>

    <string name="exp_wall_color">色</string>
    <string name="exp_wall_bri">明るさ</string>

    <string name="exp_vm_situ">映像</string>
    <string name="exp_vm_sound">音量</string>

    <string name="img_description1">hoge</string>

    <string name="bri_high">かなり明るい</string>
    <string name="bri_mid">明るい</string>
    <string name="bri_low">暗い</string>
    <string name="bri_zero">消灯</string>

    <string name="hello_world">指示があるまで触らないでください</string>
</resources>
